Split `jcef-bundler` into with and without install task